force-app/main/default/objects/InteractionLog__c/InteractionLog__c.object-meta.xml
<CustomObject>
    <label>Interaction Log</label>
    <pluralLabel>Interaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>Text</type>
        <label>Interaction Log Name</label>
    </nameField>
</CustomObject>