force-app/main/default/objects/InteractionLog__c/fields/InteractionDate__c.field-meta.xml
<CustomField>
    <fullName>InteractionDate__c</fullName>
    <label>Interaction Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>