force-app/main/default/objects/InteractionLog__c/fields/InteractionType__c.field-meta.xml
<CustomField>
    <fullName>InteractionType__c</fullName>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>