force-app/main/default/objects/InteractionLog__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Interaction Logs</relationshipLabel>
    <relationshipName>Interaction_Logs</relationshipName>
    <required>true</required>
</CustomField>